<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
     >
            
    <EditText
        android:id="@+id/password_edit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:scrollHorizontally="true"
        android:gravity="fill_horizontal"
        android:inputType="textPassword"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:hint="@string/edit_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout 
        android:id="@+id/buttonLinearLayout"
        style="@style/ButtonContainer"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/loginButton"
            style="@style/Button"
            android:text="@string/login"
            />
         
          <Button
            android:id="@+id/exitButton"
            style="@style/Button"
            android:text="@string/exit"
            />
        
    </LinearLayout>
    
</LinearLayout>
